--- a/assets/index.html
+++ b/assets/index.html
@@ -5,13 +5,29 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto+Condensed:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Fredoka:wght@300..700&family=Roboto+Condensed:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
     <title>Bootstrap demo</title>
-    <link rel="stylesheet" href="./css/style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
+    <div class="container text-center">
+        <h1 class="mb-5 mt-4"><strong>Meet our Team</strong></h1>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorum, iste. Officiis iste modi a optio eum accusamus, quidem nam voluptatem sint architecto eius corporis eligendi quo veniam pariatur laudantium ipsam?</p>
+    </div>
+    <div class="container d-flex">
+        <div class="card bg-dark text-center d-flex">
+            <div class="card_img">
+                <img src="./img/male1.png" alt="Ragazzo 1">
+            </div>
+            <div class="card_info text-light">
+                <h3><strong>MARCO BIANCHI</strong></h3>
+                <p>Designer</p>
+                <a id="email" href="#">marcobianchi@team.com</a>
+            </div>
+        </div>
+    </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
-    <script src="./assets/js/script.js"></script>
+    <script src="./js/script.js"></script>
 </body>
 </html>
