feat: first card

--- a/assets/index.html
+++ b/assets/index.html
@@ -15,13 +15,13 @@
         <h1 class="mb-5 mt-4"><strong>Meet our Team</strong></h1>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorum, iste. Officiis iste modi a optio eum accusamus, quidem nam voluptatem sint architecto eius corporis eligendi quo veniam pariatur laudantium ipsam?</p>
     </div>
-    <div class="container d-flex">
-        <div class="card bg-dark text-center d-flex">
+    <div class="container d-flex justify-content-center gap-5 flex-wrap">
+        <div class="card-team bg-black d-flex">
             <div class="card_img">
                 <img src="./img/male1.png" alt="Ragazzo 1">
             </div>
-            <div class="card_info text-light">
-                <h3><strong>MARCO BIANCHI</strong></h3>
+            <div class="card_info text-light p-3 me-5">
+                <h4><strong>MARCO BIANCHI</strong></h4>
                 <p>Designer</p>
                 <a id="email" href="#">marcobianchi@team.com</a>
             </div>
