feat: add member card

--- a/assets/index.html
+++ b/assets/index.html
@@ -13,9 +13,9 @@
 <body>
     <div class="container text-center">
         <h1 class="mb-5 mt-4"><strong>Meet our Team</strong></h1>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorum, iste. Officiis iste modi a optio eum accusamus, quidem nam voluptatem sint architecto eius corporis eligendi quo veniam pariatur laudantium ipsam?</p>
+        <p class="mb-5">Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorum, iste. Officiis iste modi a optio eum accusamus, quidem nam voluptatem sint architecto eius corporis eligendi quo veniam pariatur laudantium ipsam?</p>
     </div>
-    <div class="container d-flex justify-content-center gap-5 flex-wrap">
+    <div class="team-container d-flex justify-content-center gap-5 flex-wrap">
         <div class="card-team bg-black d-flex">
             <div class="card_img">
                 <img src="./img/male1.png" alt="Ragazzo 1">
