feat: add responsive card

--- a/assets/index.html
+++ b/assets/index.html
@@ -11,21 +11,24 @@
     <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
-    <div class="container text-center">
-        <h1 class="mb-5 mt-4"><strong>Meet our Team</strong></h1>
-        <p class="mb-5">Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorum, iste. Officiis iste modi a optio eum accusamus, quidem nam voluptatem sint architecto eius corporis eligendi quo veniam pariatur laudantium ipsam?</p>
-    </div>
-    <div class="team-container d-flex justify-content-center gap-5 flex-wrap">
-        <div class="card-team bg-black d-flex">
-            <div class="card_img">
-                <img src="./img/male1.png" alt="Ragazzo 1">
-            </div>
-            <div class="card_info text-light p-3 me-5">
-                <h4><strong>MARCO BIANCHI</strong></h4>
-                <p>Designer</p>
-                <a id="email" href="#">marcobianchi@team.com</a>
+    <div class="container">
+        <div class="container text-center">
+            <h1 class="mb-5 mt-4"><strong>Meet our Team</strong></h1>
+            <p class="mb-5">Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorum, iste. Officiis iste modi a optio eum accusamus, quidem nam voluptatem sint architecto eius corporis eligendi quo veniam pariatur laudantium ipsam?</p>
+        </div>
+        <div class="team-container justify-content-center d-flex flex-wrap">
+            <div class="card-team bg-black d-flex">
+                <div class="card_img">
+                    <img src="./img/male1.png" alt="Ragazzo 1">
+                </div>
+                <div class="card_info text-light p-3 me-4">
+                    <h4><strong>MARCO BIANCHI</strong></h4>
+                    <p>Designer</p>
+                    <a id="email" href="#">marcobianchi@team.com</a>
+                </div>
             </div>
         </div>
+        
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
     <script src="./js/script.js"></script>
