--- a/assets/index.html
+++ b/assets/index.html
@@ -28,7 +28,21 @@
                 </div>
             </div>
         </div>
-        
+        <form id="member-form">
+            <div>
+                <input type="text" id="name" placeholder="Nome completo" required>
+            </div>
+            <div>
+                <input type="text" id="role" placeholder="Ruolo" required>
+            </div>
+            <div>
+                <input type="text" id="email" placeholder="Inserisci la tua e-mail" required>
+            </div>
+            <div>
+                <input type="text" id="image" placeholder="Url dell'immagine" required>
+            </div>
+            <button type="submit">Aggiungi membro</button>
+        </form>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
     <script src="./js/script.js"></script>
