--- a/assets/index.html
+++ b/assets/index.html
@@ -28,21 +28,24 @@
                 </div>
             </div>
         </div>
-        <form id="member-form">
-            <div>
-                <input type="text" id="name" placeholder="Nome completo" required>
-            </div>
-            <div>
-                <input type="text" id="role" placeholder="Ruolo" required>
-            </div>
-            <div>
-                <input type="text" id="email" placeholder="Inserisci la tua e-mail" required>
-            </div>
-            <div>
-                <input type="text" id="image" placeholder="Url dell'immagine" required>
-            </div>
-            <button type="submit">Aggiungi membro</button>
-        </form>
+        <div class="containerForm text-center mt-4 bg-secondary rounded">
+            <form id="member-form">
+                <h2 class="mt-3"><strong>Aggiungi una nuova card</strong></h2>
+                <div>
+                    <input class="mb-3 text-center rounded" type="text" id="name" placeholder="Nome completo" required>
+                </div>
+                <div>
+                    <input class="mb-3 text-center rounded" type="text" id="role" placeholder="Ruolo" required>
+                </div>
+                <div>
+                    <input class="mb-3 text-center rounded" type="text" id="email" placeholder="Inserisci la tua e-mail" required>
+                </div>
+                <div>
+                    <input class="mb-3 text-center rounded" type="text" id="image" placeholder="Url dell'immagine" required>
+                </div>
+                <button class="btn btn-primary mb-3" type="submit">Aggiungi membro</button>
+            </form>
+        </div>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
     <script src="./js/script.js"></script>
