--- a/assets/index.html
+++ b/assets/index.html
@@ -46,7 +46,7 @@
                     <input class="mb-3 text-center rounded" type="text" id="email" placeholder="Inserisci la tua e-mail" required>
                 </div>
                 <div>
-                    <input class="mb-3 text-center rounded" type="text" id="image" placeholder="Url dell'immagine" required>
+                    <input class="mb-3 text-center rounded" type="text" id="image" placeholder="Url dell'immagine">
                 </div>
                 <button class="btn btn-primary mb-3" type="submit">Aggiungi membro</button>
             </form>
